fix(a11y): lack of contrast on the toolbar buttons (#1061)
* fix: fixed lack of contrast on the toolbar buttons - A11Y

* chore: release.md

* chore: added link to comment

---------

--- a/src/theme/extras/_toolbar.scss
+++ b/src/theme/extras/_toolbar.scss
@@ -5,4 +5,15 @@
     max-width: 220px;
     margin: 0 auto;
   }
+
+  //BACKPORT of https://github.com/plone/volto/pull/7771
+  //start
+  .toolbar {
+    .toolbar-body {
+      .button > .icon:not(.button) {
+        opacity: 1;
+      }
+    }
+  }
+  //end
 }
